deployer/deployment-controller/src/main/resources/kubernetes/templates-direct/ingress.yaml
# this apigroup is available from 1.14 onwards
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $(NAME)
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  labels:
    app.kubernetes.io/name: $(NAME)
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: $(ID)
    app.kubernetes.io/managed-by: payara-cloud
spec:
  rules:
  - host: $(PROJECT)-$(STAGE).$(DOMAIN)
    http:
      paths:
      - path: $(PATH)
        backend:
          serviceName: $(NAME)
          servicePort: 80
